[gd_scene load_steps=9 format=3 uid="uid://chvh53nx4tiu0"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_gan4w"]
[ext_resource type="Texture2D" uid="uid://dkxc2qf8vara" path="res://art/ui/b_paused.png" id="2_aatdt"]
[ext_resource type="LabelSettings" uid="uid://8hgs3nyir1p1" path="res://scenes/ui/option_label.tres" id="3_khh47"]
[ext_resource type="FontFile" uid="uid://ceacdqc72473j" path="res://fonts/DraconisBold.ttf" id="4_qujkw"]
[ext_resource type="PackedScene" uid="uid://dviqbt6cf7dgx" path="res://scenes/ui/options_menu.tscn" id="6_431lf"]
[ext_resource type="AudioStream" uid="uid://cbi1u58n7ogrw" path="res://music/ui_click.mp3" id="12_6ny5m"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fths2"]
blend_mode = 3

[sub_resource type="Theme" id="Theme_ao0su"]
Button/colors/font_color = Color(0.184314, 0.137255, 0.137255, 1)
Button/colors/font_focus_color = Color(0.184314, 0.137255, 0.137255, 1)
Button/colors/font_hover_color = Color(0.741176, 0.572549, 0.572549, 1)
Button/colors/font_pressed_color = Color(0.184314, 0.137255, 0.137255, 1)
Button/font_sizes/font_size = 160
Button/fonts/font = ExtResource("4_qujkw")

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_gan4w")

[node name="Overlay" type="ColorRect" parent="."]
material = SubResource("CanvasItemMaterial_fths2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105882, 0.188235, 0.258824, 1)

[node name="PauseBG" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 950.0
offset_top = 592.0
offset_right = 990.0
offset_bottom = 632.0

[node name="BackButton" type="Button" parent="PauseBG"]
z_index = -1
layout_mode = 0
offset_left = 202.0
offset_top = 146.0
offset_right = 210.0
offset_bottom = 154.0
scale = Vector2(10.7123, 7.94794)

[node name="Sprite2D" type="Sprite2D" parent="PauseBG"]
position = Vector2(0, -102)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_aatdt")

[node name="Label" type="Label" parent="PauseBG"]
layout_mode = 0
offset_left = -230.0
offset_top = -438.0
offset_right = 258.0
offset_bottom = -346.0
scale = Vector2(0.9, 0.9)
text = "PAUSED"
label_settings = ExtResource("3_khh47")

[node name="Resume" type="Button" parent="PauseBG"]
layout_mode = 0
offset_left = -70.0
offset_top = -260.0
offset_right = 311.0
offset_bottom = -75.0
scale = Vector2(0.391, 0.391)
theme = SubResource("Theme_ao0su")
text = "Resume"
flat = true

[node name="Options" type="Button" parent="PauseBG"]
layout_mode = 0
offset_left = -70.0
offset_top = -120.0
offset_right = 312.0
offset_bottom = 65.0
scale = Vector2(0.391, 0.391)
theme = SubResource("Theme_ao0su")
text = "Options"
flat = true

[node name="Quit" type="Button" parent="PauseBG"]
layout_mode = 0
offset_left = -70.0
offset_top = 20.0
offset_right = 311.0
offset_bottom = 205.0
scale = Vector2(0.391, 0.391)
theme = SubResource("Theme_ao0su")
text = "Quit"
flat = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_6ny5m")
volume_db = -7.495
bus = &"Effects"

[node name="OptionsMenu" parent="." instance=ExtResource("6_431lf")]
layer = 2

[connection signal="pressed" from="PauseBG/BackButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseBG/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseBG/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PauseBG/Quit" to="." method="_on_quit_pressed"]
